@@ -241,6 +241,27 @@ our $RGB_SPACE = {
                              ]),
                       'white_point' => $WHITE_POINT->{'D65'},
                     },
+          'lsRGB' => {
+                      'gamma' => 1.0,
+                      'm' => pdl([
+                               [
+                                 '0.412423757575757',
+                                 '0.212656',
+                                 '0.0193323636363636'
+                               ],
+                               [
+                                 '0.357579',
+                                 '0.715158',
+                                 '0.119193'
+                               ],
+                               [
+                                 '0.180465',
+                                 '0.072186',
+                                 '0.950449'
+                               ]
+                             ]),
+                      'white_point' => $WHITE_POINT->{'D65'},
+                    },
           'ColorMatch' => {
                             'gamma' => '1.8',
                             'm' => pdl([
