@@ -1,6 +1,7 @@
 - no need to supply mstar for add_rgb_space
 - can supply add_rgb_space-format hash-ref to the relevant functions
-- add rgb_to_lab and lab_to_rgb
+- add rgb_to_lab, lab_to_rgb, rgb_{to,from}_linear
+- add lsRGB colour space
 
 0.201 2022-02-14
 - more accurate dependencies
